# tio4550-housing-energy

./: .gitignore  README.md  main.py  pyproject.toml
docs/: dev_setup.md  project_structure.md
notebooks/: 1_exploratory_data_analysis.ipynb  2_data_processing.ipynb  3_data_sampling.ipynb  3_feature_engineering.ipynb  4_modeling.ipynb  4_openai_api.ipynb  5_openai_api.ipynb  5_plots_stats.ipynb  data_setup.ipynb
src/tio4550_housing_energy/: __init__.py
src/tio4550_housing_energy/data_processing/: __init__.py  data_processing.py
src/tio4550_housing_energy/exploratory_data_analysis/: __init__.py
src/tio4550_housing_energy/feature_engineering/: __init__.py
src/tio4550_housing_energy/modeling/: __init__.py
src/tio4550_housing_energy/utils/: __init__.py  utils.py
